@@ -29,6 +29,7 @@ v8.0.32
 - BUG#27426532: Reduce callproc roundtrip time
 - BUG#24364556: Improve warning behavior
 - BUG#23342572: Allow dictionaries as parameters in prepared statements
+- BUG#23339387: Add MySQLCursorPreparedDict option
 
 v8.0.31
 =======
